Add ComposerPageActivity parent activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity
             android:name=".ComposerPageActivity"
             android:label="Composer"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait">
 
         </activity>
